# Collapsed-Engine-Cocos

./: .gitignore  AUTHORS  CONTRIBUTING.md  CONTRIBUTORS  README.md
Client/: Client.ccs
Client/Classes/: AccountScreen.cpp  AccountScreen.h  App.cpp  App.h  Character.cpp  Character.h  CharacterCreationScreen.cpp  CharacterCreationScreen.h  Chat.cpp  Chat.h  Client.cpp  Client.h  Config.h  Dialogue.cpp  Dialogue.h  DragWindow.cpp  DragWindow.h  Guild.cpp  Guild.h  GuildAddMember.cpp  GuildAddMember.h  GuildCreation.cpp  GuildCreation.h  GuildSettings.cpp  GuildSettings.h  Lang.cpp  Lang.h  Langs.cpp  Loader.cpp  Loader.h  LoadingScreen.cpp  LoadingScreen.h  Main.h  MsgBox.cpp  MsgBox.h  Options.cpp  Options.h  PacketHandler.cpp  Packets.h  (+10 more)
Server/: CMakeLists.txt  Server.sln  starter
Server/Server/: Account.cpp  Account.h  AccountModule.cpp  AccountModule.h  Character.cpp  Character.h  CharacterModule.cpp  CharacterModule.h  ChatModule.cpp  ChatModule.h  Class.cpp  Class.h  Client.cpp  Client.h  Commands.cpp  Config.h  ConnectionModule.cpp  ConnectionModule.h  Console.cpp  Console.h  Debug.h  Dialogue.cpp  Dialogue.h  DialogueModule.cpp  DialogueModule.h  Error.h  FileLogger.cpp  FileLogger.h  Guild.cpp  Guild.h  GuildMember.cpp  GuildMember.h  GuildModule.cpp  GuildModule.h  Info.h  LoopCounter.cpp  LoopCounter.h  Main.cpp  Main.h  Module.cpp  (+19 more)
Server/Server/Data/: config.tpl.ini
Server/Server/Data/Dialogues/: 0.lua
Server/cmake/: FindLua.cmake  FindSoci.cmake
include/: SharedCharacter.h  SharedClass.h  SharedGlobal.h  SharedGuild.h  Typedefs.h
sql/: mysql.sql
(+150 files in other folders)
